--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <bode>
     <article>
+       <header>
         <h1>Основы HTML</h1>
         <ol>
             <li><a href="#a1">Что такое HTML на самом деле?</a></li>
@@ -24,6 +25,7 @@
             </ul>
             <li><a href="#a3">Заключение</a></li>
         </ol>
+        </header>
         <p>HTML (Hypertext Markup Language) - это код, который используется для структурирования и отображения веб-страницы и ее контента. Например, контент может быть структурирован внутри множества параграфов, маркированных списков или с использованием изображений и таблиц данных. Или это может быть даже изображения или таблицы данных. Как видно из названия, эта статья даст вам базовое понимание HTML и его функций.</p>
         <h2 id="a1">Что такое HTML на самом деле?</h2> HTML не является языком программирования; это язык разметки, и используется, чтобы сообщать вашему браузеру как отображать веб-страницы, которые вы посещаете. Он может быть сложным или простым, в зависимости от того, как хочет веб-дизайнер. HTML состоит из ряда элементов, которые вы используете, чтобы вкладывать или оборачивать различные части контента, чтобы заставить контент отображаться или действовать определенным образом. Ограждающие теги могут сделать слово или изображение ссылкой на что-то еще, могут сделать слова курсивом, сделать шрифт больше или меньше и так далее. Например, возьмем следующую строку контента:
 
@@ -32,7 +34,9 @@
         <p><code>&lt;p&gt;My cat is very grumpy&lt;/p&gt;</code></p>
         <h3 id="a1.1">Анатомия HTML элемента</h3>
         <p>Давайте рассмотрим &lt;p&gt; элемент параграфа более подробно.</p>
-        <p><img src="https://raw.githubusercontent.com/KovalskiiBobro/frontend-html-semantic/master/src/images/grumpy-cat-small.png"></p>
+        <p>
+        <img src="images/grumpy-cat-small.png" alt="grumpy-cat-small">
+        </p>
         <ol>
             <p>
                 <li><strong>Открывающий тег:</strong> Состоит из имени этого элемента (в данном случае, p), заключенного в открывающие и закрывающие угловые скобки. Указывает, где элемент начинается или начинает действовать — в данном случае, где начинается параграф.</li>
@@ -42,7 +46,9 @@
             </p>
         </ol>
         <p>Элементы также могут иметь атрибуты, которые выглядят так:</p>
-        <p><img src="https://raw.githubusercontent.com/KovalskiiBobro/frontend-html-semantic/master/src/images/grumpy-cat-attribute-small.png"></p>
+        <p>
+        <img src="images/grumpy-cat-attribute-small.png" alt="grumpy-cat-attribute">
+        </p>
         <p><em>Атрибуты</em> содержат дополнительную информацию об элементе, которую вы не хотите показывать в фактическом контенте. В данном случае, атрибут класса позволяет дать элементу идентификационное имя, которое может позже использоваться для целевого элемента с информацией о стиле и прочих вещах.
             <ol>
                 <p>
@@ -58,7 +64,7 @@
             Вы также должны убедиться, что ваши элементы вложены правильно: в примере выше мы открыли первым &lt;p&gt; элемент, затем &lt;strong&gt; элемент, потом мы должны закрыть сначала &lt;strong&gt; элемент, затем &lt;p&gt;. Приведенное ниже неверно:
             <p><code>&lt;p&gt;My cat is &lt;strong&gt;very grumpy&lt;/p&gt;&lt;/strong&gt;</code></p>
             <p>Элементы должны открываться и закрываться правильно, поэтому они явно внутри или снаружи друг друга. Если они перекрываются как в примере выше, тогда ваш веб-браузер будет пытаться сделать наилучшее предположение на то, что вы пытались сказать, и вы также можете получить непредсказуемые результаты. Так что не стоит этого делать!</p>
-            <h3 ig="a1.3">Пустые элементы</h3>
+            <h3 id="a1.3">Пустые элементы</h3>
             <p>Некоторые элементы не имеют контента, и называются пустыми элементами. Возьмем <img> элемент, который мы уже имеем в нашем HTML:</p>
 
             <p><code>&lt;img src="images/firefox-icon.png" alt="My test image"&gt;</code></p>
@@ -97,25 +103,26 @@
                     <th>Tag omission</th>
                     <td>The start tag may be omitted if the first thing inside the &lt;html&gt; element is not a comment. The end tag may be omitted if the &lt;html&gt; element is not immediately followed by a comment, and it contains a &lt;bode&gt; element either that is not empty, or whose start tag is present.</td>
                 </tr>
-           <tr> 
-               <th>Допустимые родительские элементы</th>
+                <tr>
+                    <th>Допустимые родительские элементы</th>
                     <td>As the root element of a document, or wherever a subdocument fragment is allowed in a compound document..</td>
                 </tr>
-                 <tr> 
-                     <th>Интерфейс DOM</th>
+                <tr>
+                    <th>Интерфейс DOM</th>
                     <td>HTMLHtmlElement</td>
                 </tr>
-        </table>
-                <h3 id="a2.1">Атрибуты</h3>
-                <dl> <dt><strong>manifest</strong></dt>
-                    <dd>Specifies the URI of a resource manifest indicating resources that should be cached locally. "See Using the application cache" for details.</dd>
-                    <dt><strong>version</strong></dt>
-                    <dd>Specifies the version of the HTML Document Type Definition that governs the current document. This attribute is not needed, because it is redundant with the version information in the document type declaration.</dd>
-                    <dt><strong>xmlns</strong> </dt>
-                    <dd>Specifies the XML Namespace of the document. Default value is "http://www.w3.org/1999/xhtml". This is required in XHTML, and optional in HTML5.</dd>
-                </dl>
-                <h2 id="a3">Заключение</h2>
-                <p>Полные версии статей можно найти по ссылкам <a href="https://www.google.com.ua/Основы">HTML и Элемент</a><a href="https://www.google.com.ua/Основы">&lt;html&gt;</a></p>
+            </table>
+            <h3 id="a2.1">Атрибуты</h3>
+            <dl> <dt><strong>manifest</strong></dt>
+                <dd>Specifies the URI of a resource manifest indicating resources that should be cached locally. "See Using the application cache" for details.</dd>
+                <dt><strong>version</strong></dt>
+                <dd>Specifies the version of the HTML Document Type Definition that governs the current document. This attribute is not needed, because it is redundant with the version information in the document type declaration.</dd>
+                <dt><strong>xmlns</strong> </dt>
+                <dd>Specifies the XML Namespace of the document. Default value is "http://www.w3.org/1999/xhtml". This is required in XHTML, and optional in HTML5.</dd>
+            </dl>
+            <h2 id="a3">Заключение</h2>
+            <p>Полные версии статей можно найти по ссылкам <a href="#">Основы HTML</a>
+                <a href="#">Элименты&lt;html&gt;</a></p>
 
     </article>
 </bode>
